--- a/index.html
+++ b/index.html
@@ -1,184 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sharath Chandra Chinnarigari</title>
-     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-color: #f8f9fa;
-            color: #495057;
-        }
-        header {
-            text-align: center;
-            padding: 20px;
-            background-color: #343a40;
-            color: #fff;
-        }
-        #resume-container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #ced4da;
-            border-radius: 8px;
-            background-color: #fff;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-        }
-        #download-button {
-            display: block;
-            width: 100%;
-            padding: 12px;
-            margin-top: 20px;
-            text-align: center;
-            background-color: #007bff;
-            color: #fff;
-            text-decoration: none;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-        #download-button:hover {
-            background-color: #0056b3;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #343a40;
-            color: #fff;
-        }
-        section {
-            margin-bottom: 30px;
-        }
-        h2 {
-            color: #007bff;
-            font-size: 24px;
-            margin-bottom: 15px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        ul li {
-            margin-bottom: 10px;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-        a:hover {
-            color: #0056b3;
-        }
+    <title>Sharath Chandra's Resume</title>
+    <meta
+      name="description"
+      content="View Sharath Chandra's resume. Download the PDF to learn more about his skills and experience."
+    />
+    <meta
+      name="keywords"
+      content="Sharath Chandra,chinnarigari,sharathwiki,sharath.wiki, sharath , sharath resume,sharath chandra resume, chinnarigari resume"
+    />
+    <style>
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+      }
+
+      embed { 
+        width: 100vw;
+        height: 100vh;
+      }
     </style>
-</head>
-<body>
-    <header>
-        <h1>Sharath Chandra Chinnarigari</h1>
-        <p>Web Developer</p>
-    </header>
-
-    <div id="resume-container">
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>+91 7386068262 | csharathchandra3@gmail.com | <a href="https://linkedin.com/in/csharath-chandra/" target="_blank">LinkedIn</a> | <a href="https://github.com/Sharathchandra345" target="_blank">GitHub</a></p>
-        </section>
-
-        <section id="education">
-            <h2>Education</h2>
-            <p><strong>Thapar Institute of Engineering and Technology</strong><br>Bachelor of Engineering in Computer Science and Engineering<br>CGPA: 7.91 | Sept. 2022 – Sept. 2026</p>
-            <p><strong>Vinjee Junior College</strong><br>High-School | Percentage: 97.7% | 100% PCM aggregate | Mar. 2020 – June 2018</p>
-        </section>
-
-        <section id="experience">
-            <h2>Experience</h2>
-            <p><strong>Full Stack Web Developer Intern</strong><br>NotAtMRP Punjab<br>Nov. 2023 – Present<br>
-                <ul>
-                    <li>Created the website <a href="#" target="_blank">notatmrp.com</a> utilizing React and Tailwind CSS.</li>
-                    <li>Developing an application using React Native.</li>
-                    <li>Implemented SEO strategies for a website, optimizing content and improving search engine visibility.</li>
-                </ul>
-            </p>
-        </section>
-
-        <section id="core-member-acm">
-            <h2>Core Member - Association for Computing Machinery</h2>
-            <p>Oct. 2022 – Present<br>
-                <ul>
-                    <li>Among the 20 people selected as core members in the student chapter of the world’s largest computing society.</li>
-                    <li>Contributed to several society projects, including the Event Coordination website and the ACM chapter website.</li>
-                    <li>Participated in intra-society competitive programming contests and hackathons.</li>
-                </ul>
-            </p>
-        </section>
-
-        <section id="core-member-creative-computing-society">
-            <h2>Core Member - Creative Computing Society</h2>
-            <p>Nov. 2019 – Present<br>
-                <ul>
-                    <li>Among the 20 recruits selected from 1700+ applicants.</li>
-                    <li>Contributed to a 3D cryptic hunt game developed using React.js, Three.js, and Blender.</li>
-                    <li>Contributed to many other websites developed for Society Events.</li>
-                </ul>
-            </p>
-        </section>
-
-        <section id="executive-member-google-developer-students-club">
-            <h2>Executive Member - Google Developer Students Club Thapar University</h2>
-            <p>Nov. 2023 – Present</p>
-        </section>
-
-        <section id="projects">
-            <h2>Projects</h2>
-            <p><strong>SDCEE-2024 | React.js Live</strong><br>
-                Website for the International Conference on ”Sustainable Development in Chemical and Environmental Engineering.
-            </p>
-            <p><strong>NotAtMRP | React.js, TailwindCSS, PHP Live</strong><br>
-                Website built for an affiliate marketing-based startup.
-            </p>
-            <p><strong>Typing Test Website | HTML, CSS, JS Live</strong><br>
-                Used as a game for freshmen during a fair organized by the Creative Computing Society.
-            </p>
-            <p><strong>HeritageShield | Live</strong><br>
-                Vandalism Detection, Reverse Lost and Found, Litter Detection.
-            </p>
-        </section>
-
-        <section id="achievements">
-            <h2>Achievements</h2>
-            <p><strong>Winner - Smart India Hackathon</strong><br>
-                Dec. 2023 | Issued by Ministry of Education
-            </p>
-            <p><strong>Winner - Orion Tech Fest Hackathon</strong><br>
-                Feb. 2023 | Issued by Orion Tech Fest
-            </p>
-            <p><strong>Finalist - Rajasthan Police Hackathon 1.0</strong><br>
-                Jan. 2024
-            </p>
-        </section>
-
-        <section id="technical-skills">
-            <h2>Technical Skills</h2>
-            <p><strong>Languages:</strong> C/C++, Python, JavaScript, HTML/CSS</p>
-            <p><strong>Frameworks:</strong> React, Node.js, Bootstrap, Tailwind CSS</p>
-            <p><strong>Developer Tools:</strong> Git, GitHub, Linux, Ubuntu, VS Code</p>
-            <p><strong>Design:</strong> Adobe After Effects, Premiere Pro, Blender, Canva, Figma</p>
-        </section>
-
-        <!-- Download Button -->
-        <a id="download-button" href="./Sharath_resume.pdf" download>Download Full Resume</a>
-    </div>
-
-    <footer>
-        <p>
-            Find me on
-            <a href="https://github.com/Sharathchandra345" target="_blank">GitHub</a>
-        </p>
-    </footer>
-</body>
+  </head>
+  <body>
+    <embed src="/SharathChandraResume.pdf" title="Sharath Chandra's Resume" />
+  </body>
 </html>
